doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Users/jankroon/Developments/Greenfoot Scenario's/Cars
-d
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/Greenfoot 2.4.0/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java
<---- end of javadoc command ---->
Loading source file /Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java...
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:18: error: '{' expected
        switch (c) :
                  ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:18: error: case, default, or '}' expected
        switch (c) :
                   ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:19: error: case, default, or '}' expected
        this.setImage
        ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:19: error: case, default, or '}' expected
        this.setImage
            ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:19: error: case, default, or '}' expected
        this.setImage
             ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:27: error: illegal start of expression
    public void act() 
    ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:27: error: illegal start of expression
    public void act() 
           ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:27: error: ';' expected
    public void act() 
                   ^
/Users/jankroon/Developments/Greenfoot Scenario's/Cars/Car.java:31: error: reached end of file while parsing
}
 ^
9 errors
